--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="A site that caters to both restaurants and stores, offering specialized billing solutions for each." />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%favicon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!-- Font Awesome -->
